Shang New Live/src/objects/LOI_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Trading_Date__c</fullName>
        <label>Actual Trading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Sq_Ft__c</fullName>
        <formula>Unit__r.NLA_SQF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area (Sq.Ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorised_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tenant&apos;s contact information.</inlineHelpText>
        <label>Authorised Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LOI Units (Handover Contact)</relationshipLabel>
        <relationshipName>Handover_LOI_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CT_Meter_No__c</fullName>
        <label>CT Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Base_Rent__c</fullName>
        <label>Current Base Rent</label>
        <summarizedField>LOI_Charges__c.Base_Rent__c</summarizedField>
        <summaryFilterItems>
            <field>LOI_Charges__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LOI_Charges__c.Name</field>
            <operation>contains</operation>
            <value>Base Rent</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LOI_Charges__c.Base_Rent__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>LOI_Charges__c.LOI_Unit__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Day_s_in_expired__c</fullName>
        <formula>(LOI_End_Date__c - TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day(s) in expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension_Date__c</fullName>
        <label>Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fit_Out_Date__c</fullName>
        <label>Fit Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gas_Meter_No__c</fullName>
        <externalId>true</externalId>
        <label>Gas Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_CheckList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate CheckList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handover_Date__c</fullName>
        <description>Date for unit handover to tenant</description>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handover_Signed_off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be updated via Checklist - Process Builder
This is used to create Fit-out Deposit records under LOI Unit</description>
        <label>Handover Signed-off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horse_Power__c</fullName>
        <label>Horse Power</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOI_Agreement_No__c</fullName>
        <label>LOI Agreement No.</label>
        <referenceTo>LOI__c</referenceTo>
        <relationshipLabel>LOI Units</relationshipLabel>
        <relationshipName>LOI_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LOI_End_Date__c</fullName>
        <label>LOI End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Start_Date__c</fullName>
        <label>LOI Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <formula>Unit__r.Level__r.Name</formula>
        <label>Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Loss__c</fullName>
        <label>Line Loss</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_End_Date__c</fullName>
        <inlineHelpText>This field would be populated only in the case of Extension or Pre-Termination and would show the Original End Date of this LOI Unit.</inlineHelpText>
        <label>Original End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POS_No__c</fullName>
        <label>POS No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LOI Units (Person In Charge__c)</relationshipLabel>
        <relationshipName>LOI_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Extension_No__c</fullName>
        <externalId>true</externalId>
        <label>Phone Extension No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Factor__c</fullName>
        <label>Power Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Unit__r.Property_Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>LOI_Agreement_No__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <label>Reason for Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Free_End_Date__c</fullName>
        <label>Rent Free End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Free_Start_Date__c</fullName>
        <label>Rent Free Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_per_Sq_Feet__c</fullName>
        <formula>IF (Current_Base_Rent__c &gt; 0 , Current_Base_Rent__c  / Area_Sq_Ft__c ,
      0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent per Sq Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Meter_No__c</fullName>
        <label>Sub Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Trading_Date__c</fullName>
        <label>Target Trading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <formula>if( LOI_Agreement_No__r.Tenant__c != null,  LOI_Agreement_No__r.Tenant__r.Name, &apos;&apos;)</formula>
        <label>Tenant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>LOI Units</relationshipLabel>
        <relationshipName>LOI_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_LOI_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update LOI Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_Meter_No__c</fullName>
        <label>Water Meter No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>LOI Unit</label>
    <nameField>
        <label>LOI Unit No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOI Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>